unpackaged/main/default/objects/CS_Revenue_Schedule_Item__c/CS_Revenue_Schedule_Item__c.object-meta.xml
<CustomObject>
    <description>Individiual details for one billing period for one line within a Sales Order</description>
    <label>Revenue Schedule Item</label>
    <nameField>
        <displayFormat>REVI-{00000000}</displayFormat>
        <label>Revenue Recognition Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenue Schedule Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>