unpackaged/main/default/objects/CS_Revenue_Schedule_Item__c/fields/Booked_Net_Amount__c.field-meta.xml
<CustomField>
    <fullName>Booked_Net_Amount__c</fullName>
    <label>Booked Net Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>