unpackaged/main/default/objects/CS_Revenue_Schedule_Item__c/fields/Booked_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Booked_Quantity__c</fullName>
    <label>Booked Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>