unpackaged/main/default/objects/CS_Revenue_Schedule_Item__c/fields/Cancelled_after_Closing__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_after_Closing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancelled after Closing</label>
    <type>Checkbox</type>
</CustomField>