unpackaged/main/default/objects/CS_Revenue_Schedule_Item__c/fields/Capped_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Capped_Quantity__c</fullName>
    <description>Maximum Quantity that can be recognised. Capped Quantity is calculated as follows:
 - Contracted Quantity - Reconciled / Billed To Date</description>
    <formula>/*
*
* Original method, based on revenue recognised. 
* 
*
if(  Revenue_Schedule__r.Total_Recognised_Quantity_To_Date__c   =0,Contracted_Quantity__c,Contracted_Quantity__c - Revenue_Schedule__r.Total_Recognised_Quantity_To_Date__c )
*/


/*
* new method where Capped QTY is based on Billed QTY, not necessarily what DFP states.
* This may lead to downstream discrepancies between SF rev Rec figures and Finance Rev rec * figures. Spotify are aware of this, and insist that this is how the functionality should * work for them. C Steen 25/2/19
if(  Revenue_Schedule__r.Total_Billed_Quantity_To_Date__c   =0,Contracted_Quantity__c,Contracted_Quantity__c - Revenue_Schedule__r.Total_Billed_Quantity_To_Date__c)
*/

/*
* Added Total_Open_Qty_in_Previous_Period__c to formula
* Added zeroing of negative values
*/
IF( (Contracted_Quantity__c - (Revenue_Schedule__r.Total_Billed_Quantity_To_Date__c + Total_Open_Qty_in_Previous_Period__c)) &lt; 0, 0, Contracted_Quantity__c - (Revenue_Schedule__r.Total_Billed_Quantity_To_Date__c + Total_Open_Qty_in_Previous_Period__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Maximum Quantity that can be recognised. Capped Quantity is calculated as follows:
 - Contracted Quantity - Reconciled / Billed To Date</inlineHelpText>
    <label>Capped Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>