unpackaged/main/default/objects/CS_Revenue_Schedule_Item__c/fields/Contracted_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Quantity__c</fullName>
    <description>Contracted Quantity as defined in the Sales Order Line.</description>
    <inlineHelpText>Contracted Quantity as defined in the Sales Order Line.</inlineHelpText>
    <label>Contracted Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>