unpackaged/main/default/objects/CS_Revenue_Schedule_Item__c/fields/Cost_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Cost_Adjustment__c</fullName>
    <description>Picklist for user to select reason for Line Item having no costs. Selection made in Line Item. Options are; No Cost Adjustment; Added Value; Brand Study; Make Good; Pro Bono.</description>
    <inlineHelpText>Picklist for user to select reason for Line Item having no costs. Selection made in Line Item. Options are; No Cost Adjustment; Added Value; Brand Study; Make Good; Pro Bono.</inlineHelpText>
    <label>Cost Adjustment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Cost Adjustment</fullName>
            </value>
            <value>
                <fullName>Added Value</fullName>
            </value>
            <value>
                <fullName>Brand Study</fullName>
            </value>
            <value>
                <fullName>Make Good</fullName>
            </value>
            <value>
                <fullName>Pro Bono</fullName>
            </value>
            <value>
                <fullName>Production fee paid by Client</fullName>
            </value>
            <value>
                <fullName>Production fee paid by Spotify</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>