unpackaged/main/default/objects/CS_Revenue_Schedule_Item__c/fields/Delivery_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Quantity__c</fullName>
    <description>Delivery Quantity is always calculated based on DFP Actuals as follows : 
Delivery Quantity = Overwrite Quantity if not 0 otherwise DFP Actuals.</description>
    <label>Delivery Quantity</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>