unpackaged/main/default/objects/CS_Revenue_Schedule_Item__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Stores value from Description attribute</description>
    <inlineHelpText>Stores value from Description attribute</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>