unpackaged/main/default/objects/CS_Revenue_Schedule_Item__c/fields/DFP_Actuals__c.field-meta.xml
<CustomField>
    <fullName>DFP_Actuals__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of impressions / clicks from DFP.</description>
    <inlineHelpText>Number of impressions / clicks from DFP.</inlineHelpText>
    <label>1st Party Actuals</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>