unpackaged/main/default/objects/CS_Revenue_Schedule_Item__c/fields/DFP_Actuals_Delta__c.field-meta.xml
<CustomField>
    <fullName>DFP_Actuals_Delta__c</fullName>
    <label>1st Party Actuals Delta</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>