unpackaged/main/default/objects/CS_Revenue_Schedule_Item__c/fields/DFP_Order_Line_ID__c.field-meta.xml
<CustomField>
    <fullName>DFP_Order_Line_ID__c</fullName>
    <description>Related DFP Order Line ID (If exists).</description>
    <inlineHelpText>Related DFP Order Line ID (If exists).</inlineHelpText>
    <label>DFP Order Line ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>