unpackaged/main/default/objects/CS_Revenue_Schedule_Item__c/fields/Exported_By_Mulesoft__c.field-meta.xml
<CustomField>
    <fullName>Exported_By_Mulesoft__c</fullName>
    <defaultValue>false</defaultValue>
    <description>DateTime in which Mulesoft processed this record. This will trigger the Forecast Recalculation</description>
    <inlineHelpText>DateTime in which Mulesoft processed this record. This will trigger the Forecast Recalculation</inlineHelpText>
    <label>Exported By Mulesoft</label>
    <type>Checkbox</type>
</CustomField>