unpackaged/main/default/objects/CS_Revenue_Schedule_Item__c/fields/Exported_to_ERP__c.field-meta.xml
<CustomField>
    <fullName>Exported_to_ERP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set by mulesoft</description>
    <inlineHelpText>Set by mulesoft</inlineHelpText>
    <label>Exported to ERP</label>
    <type>Checkbox</type>
</CustomField>