unpackaged/main/default/objects/CS_Revenue_Schedule_Item__c/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <description>External ID formed by SO ID_RecRecMonth_RevRecYear</description>
    <formula>Sales_Order__c &amp; &#39;_&#39; &amp; TEXT(MONTH(Rev_Rec_Date__c)) &amp; &#39;_&#39; &amp; TEXT(YEAR(Rev_Rec_Date__c))</formula>
    <inlineHelpText>External ID formed by SO ID_RecRecMonth_RevRecYear</inlineHelpText>
    <label>External ID</label>
    <type>Text</type>
</CustomField>