unpackaged/main/default/objects/CS_Revenue_Schedule_Item__c/fields/Flight_End__c.field-meta.xml
<CustomField>
    <fullName>Flight_End__c</fullName>
    <description>Flight End as defined in the Sales Order Line.</description>
    <inlineHelpText>Flight End as defined in the Sales Order Line.</inlineHelpText>
    <label>Flight End</label>
    <type>Date</type>
</CustomField>