unpackaged/main/default/objects/CS_Revenue_Schedule_Item__c/fields/Flight_End_GMT__c.field-meta.xml
<CustomField>
    <fullName>Flight_End_GMT__c</fullName>
    <label>Flight End GMT</label>
    <type>DateTime</type>
</CustomField>