unpackaged/main/default/objects/CS_Revenue_Schedule_Item__c/fields/Forecast_Amount__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Amount__c</fullName>
    <description>Revenue Forecast Amount</description>
    <inlineHelpText>Revenue Forecast Amount</inlineHelpText>
    <label>Forecast Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>