unpackaged/main/default/objects/CS_Revenue_Schedule_Item__c/fields/Forecast_Amount_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Amount_Adjustment__c</fullName>
    <description>The Rounding adjustment to be added to the final row in the Schedule</description>
    <formula>IF(Is_Last_Line_in_Schedule__c =TRUE &amp;&amp; NOT(OR(CONTAINS(TEXT(Status__c), &quot;Closed&quot;), CONTAINS(TEXT(Status__c), &quot;Pending Closure&quot;))), Total_Price__c - (Revenue_Schedule__r.Total_Forecast_Amount_to_Date__c + Revenue_Schedule__r.Total_Recognised_Amount_To_Date__c )
,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Rounding adjustment to be added to the final row in the Schedule</inlineHelpText>
    <label>Forecast Amount Adjustment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>