unpackaged/main/default/objects/CS_Revenue_Schedule_Item__c/fields/Forecast_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Quantity__c</fullName>
    <description>Initially created based on the Scheduled Quantity but will be adjusted over time based on the quantities being billed.</description>
    <inlineHelpText>Initially created based on the Scheduled Quantity but will be adjusted over time based on the quantities being billed.</inlineHelpText>
    <label>Forecast Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>