unpackaged/main/default/objects/CS_Revenue_Schedule_Item__c/fields/Forecast_Quantity_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Quantity_Adjustment__c</fullName>
    <description>Rounding Adjustment to applied to the last row in the schedule</description>
    <formula>IF( Is_Last_Line_in_Schedule__c = TRUE &amp;&amp; NOT(OR(CONTAINS(TEXT(Status__c), &quot;Closed&quot;), CONTAINS(TEXT(Status__c), &quot;Pending Closure&quot;))), Contracted_Quantity__c - (Revenue_Schedule__r.Total_Forecast_Quantity_To_Date__c + Revenue_Schedule__r.Total_Recognised_Quantity_To_Date__c) ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Rounding Adjustment to applied to the last row in the schedule</inlineHelpText>
    <label>Forecast Quantity Adjustment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>