unpackaged/main/default/objects/CS_Revenue_Schedule_Item__c/fields/Fulfilment_Item__c.field-meta.xml
<CustomField>
    <fullName>Fulfilment_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the related Fulfilment Item - Delivery data</description>
    <inlineHelpText>Link to the related Fulfilment Item - Delivery data</inlineHelpText>
    <label>Fulfilment Item</label>
    <referenceTo>csdf__Fulfilment_Item__c</referenceTo>
    <relationshipLabel>Revenue Recognition Schedules</relationshipLabel>
    <relationshipName>Revenue_Recognition_Schedules_new5</relationshipName>
    <type>Lookup</type>
</CustomField>