unpackaged/main/default/objects/CS_Revenue_Schedule_Item__c/fields/Invoice_GL_Code__c.field-meta.xml
<CustomField>
    <fullName>Invoice_GL_Code__c</fullName>
    <description>Invoice GL Code</description>
    <inlineHelpText>Invoice GL Code</inlineHelpText>
    <label>Invoice GL Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>