unpackaged/main/default/objects/CS_Revenue_Schedule_Item__c/fields/Is_Closed__c.field-meta.xml
<CustomField>
    <fullName>Is_Closed__c</fullName>
    <description>Specifies if the row should be considered &#39;closed&#39; for roll up summaries</description>
    <formula>OR( 
ISPICKVAL(Status__c, &quot;Ready&quot;), 
ISPICKVAL(Status__c, &quot;Pending Closure&quot;),
ISPICKVAL(Status__c, &quot;Pending&quot;), 
ISPICKVAL(Status__c, &quot;Locked&quot;), 
ISPICKVAL(Status__c, &quot;Closed&quot;) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Specifies if the row should be considered &#39;closed&#39; for roll up summaries</inlineHelpText>
    <label>Is Closed</label>
    <type>Checkbox</type>
</CustomField>