unpackaged/main/default/objects/CS_Revenue_Schedule_Item__c/fields/Is_Last_Line_in_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Is_Last_Line_in_Schedule__c</fullName>
    <description>is If Billing Beriod End Date &gt;= CS_Revenue_Schedule__r.Last_Revenue_period_end_Date</description>
    <formula>IF( Rev_Rec_Period_End_Date__c&gt;= Revenue_Schedule__r.Last_Revenue_Period_End__c,TRUE,FALSE )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>is If Billing Beriod End Date &gt;= CS_Revenue_Schedule__r.Last_Revenue_period_end_Date</inlineHelpText>
    <label>Is Last Line in Schedule</label>
    <type>Checkbox</type>
</CustomField>