unpackaged/main/default/objects/CS_Revenue_Schedule_Item__c/fields/Is_Open__c.field-meta.xml
<CustomField>
    <fullName>Is_Open__c</fullName>
    <description>Specifies if the Schedule Item  is open (forecasting) when using roll up summaries</description>
    <formula>OR(ISPICKVAL(Status__c, &quot;Open&quot;),ISPICKVAL(Status__c, &quot;Forecast&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Specifies if the Schedule Item  is open (forecasting) when using roll up summaries</inlineHelpText>
    <label>Is Open</label>
    <type>Checkbox</type>
</CustomField>