unpackaged/main/default/objects/CS_Revenue_Schedule_Item__c/fields/IsForecast__c.field-meta.xml
<CustomField>
    <fullName>IsForecast__c</fullName>
    <description>This field is to determine the billing Schedules are forecast billing schedules or not.</description>
    <formula>If(TEXT(Status__c) = &#39;Forecast&#39;,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is to determine the billing Schedules are forecast billing schedules or not.</inlineHelpText>
    <label>IsForecast</label>
    <type>Checkbox</type>
</CustomField>