unpackaged/main/default/objects/CS_Revenue_Schedule_Item__c/fields/Line_Item_Ref__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Ref__c</fullName>
    <description>PO Number as defined in the Sales Order Line.</description>
    <inlineHelpText>PO Number as defined in the Sales Order Line.</inlineHelpText>
    <label>Line Item Ref</label>
    <length>100</length>
    <type>Text</type>
</CustomField>