unpackaged/main/default/objects/CS_Revenue_Schedule_Item__c/fields/Net_Rate__c.field-meta.xml
<CustomField>
    <fullName>Net_Rate__c</fullName>
    <description>Net Unit Rate</description>
    <inlineHelpText>Net Unit Rate</inlineHelpText>
    <label>Net Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>