unpackaged/main/default/objects/CS_Revenue_Schedule_Item__c/fields/No_Rev_Accrual_Codes__c.field-meta.xml
<CustomField>
    <fullName>No_Rev_Accrual_Codes__c</fullName>
    <description>Specifies if Revenue Accrual is required based on if an Accrual GL Code is provided (or if it is blank or N/A)</description>
    <formula>Rev_Accrual_GL_Code__c = &#39;N/A&#39;</formula>
    <inlineHelpText>Specifies if Revenue Accrual is required based on if an Accrual GL Code is provided (or if it is blank or N/A)</inlineHelpText>
    <label>No Rev Accrual Codes</label>
    <type>Checkbox</type>
</CustomField>