unpackaged/main/default/objects/CS_Revenue_Schedule_Item__c/fields/Notes_Billing__c.field-meta.xml
<CustomField>
    <fullName>Notes_Billing__c</fullName>
    <description>Billing Notes as defined in the Sales Order Line.</description>
    <inlineHelpText>Billing Notes as defined in the Sales Order Line.</inlineHelpText>
    <label>Notes - Billing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>