unpackaged/main/default/objects/CS_Revenue_Schedule_Item__c/fields/Open_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Open_Schedule__c</fullName>
    <description>Indicates if this Forecast/ Open schedule which can be removed due to InFlight changes</description>
    <formula>TEXT(Status__c) = &#39;Forecast&#39; || TEXT(Status__c) = &#39;Open&#39;</formula>
    <inlineHelpText>Indicates if this Forecast/ Open schedule which can be removed due to InFlight changes</inlineHelpText>
    <label>Open Schedule</label>
    <type>Checkbox</type>
</CustomField>