unpackaged/main/default/objects/CS_Revenue_Schedule_Item__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Opportunity as defined in the Sales Order.</description>
    <inlineHelpText>Opportunity as defined in the Sales Order.</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Revenue Recognition Schedules</relationshipLabel>
    <relationshipName>Revenue_Recognition_Schedules_new7</relationshipName>
    <type>Lookup</type>
</CustomField>