unpackaged/main/default/objects/CS_Revenue_Schedule_Item__c/fields/Overwrite_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Overwrite_Quantity__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Quantity used for manual reconciliation when there are disputes and the actuals are not accurate.</description>
    <inlineHelpText>Quantity used for manual reconciliation when there are disputes and the actuals are not accurate.</inlineHelpText>
    <label>Overwrite Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>