unpackaged/main/default/objects/CS_Revenue_Schedule_Item__c/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <description>Product Category assigned to Product.</description>
    <inlineHelpText>Product Category assigned to Product.</inlineHelpText>
    <label>Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard Products</fullName>
            </value>
            <value>
                <fullName>Non-Guaranteed Products (Programmatic / Direct NG)</fullName>
            </value>
            <value>
                <fullName>House Products</fullName>
            </value>
            <value>
                <fullName>Playlist Components</fullName>
            </value>
            <value>
                <fullName>Headliner Components</fullName>
            </value>
            <value>
                <fullName>Non-Standard</fullName>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>