unpackaged/main/default/objects/CS_Revenue_Schedule_Item__c/fields/Product_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Product_Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the related Product Configuration (Sales Order Line)</description>
    <inlineHelpText>Link to the related Product Configuration (Sales Order Line)</inlineHelpText>
    <label>Product Configuration</label>
    <referenceTo>cscfga__Product_Configuration__c</referenceTo>
    <relationshipLabel>Revenue Schedule Item</relationshipLabel>
    <relationshipName>Revenue_Schedule_Item</relationshipName>
    <type>Lookup</type>
</CustomField>