unpackaged/main/default/objects/CS_Revenue_Schedule_Item__c/fields/Ready_To_Export__c.field-meta.xml
<CustomField>
    <fullName>Ready_To_Export__c</fullName>
    <description>Checkbox to indicate record is ready for integration to export data.</description>
    <formula>AND(
ISPICKVAL( Status__c, &#39;Ready&#39;) , 
NOT( Sales_Order_Revenue_On_Hold__c ),
Exported_to_Integration__c = false,
Exported_to_ERP__c = false,
Bill_Run__r.Is_Release_to_Finance_Date__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checkbox to indicate record is ready for integration to export data.</inlineHelpText>
    <label>Ready To Export</label>
    <type>Checkbox</type>
</CustomField>