unpackaged/main/default/objects/CS_Revenue_Schedule_Item__c/fields/Rev_Rec_Amount__c.field-meta.xml
<CustomField>
    <fullName>Rev_Rec_Amount__c</fullName>
    <description>Rev Rec Amount is typically calculated as Rev Rec Quantity * Unit Price
Rev Rec Amount is rounded up to 2 decimals and adjustments to match the Sales Order Total are applied on the last period</description>
    <inlineHelpText>Rev Rec Amount is typically calculated as Rev Rec Quantity * Unit Price
Rev Rec Amount is rounded up to 2 decimals and adjustments to match the Sales Order Total are applied on the last period</inlineHelpText>
    <label>Rev Rec Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>