unpackaged/main/default/objects/CS_Revenue_Schedule_Item__c/fields/Rev_Rec_Calendar__c.field-meta.xml
<CustomField>
    <fullName>Rev_Rec_Calendar__c</fullName>
    <description>Rev Rec Calendar as defined in the Sales Order.</description>
    <inlineHelpText>Rev Rec Calendar as defined in the Sales Order.</inlineHelpText>
    <label>Rev Rec Calendar</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>