unpackaged/main/default/objects/CS_Revenue_Schedule_Item__c/fields/Rev_Rec_Date__c.field-meta.xml
<CustomField>
    <fullName>Rev_Rec_Date__c</fullName>
    <description>Rev Rec Date based on the Rev Rec Rule +Rev Rec Calendar.
-Monthly Standard : Last day of each Standard Calendar Month from SO Line Item Start to End of Campaign</description>
    <inlineHelpText>Rev Rec Date based on the Rev Rec Rule +Rev Rec Calendar.
-Monthly Standard : Last day of each Standard Calendar Month from SO Line Item Start to End of Campaign</inlineHelpText>
    <label>Rev Rec Date</label>
    <type>Date</type>
</CustomField>