unpackaged/main/default/objects/CS_Revenue_Schedule_Item__c/fields/Rev_Rec_Gross_Amount__c.field-meta.xml
<CustomField>
    <fullName>Rev_Rec_Gross_Amount__c</fullName>
    <description>Rev Rec Gross Amount is calculated as Rev Rec Quantity * Gross Rate using Workflow Field Update.</description>
    <inlineHelpText>Rev Rec Gross Amount is calculated as Rev Rec Quantity * Gross Rate using Workflow Field Update.</inlineHelpText>
    <label>Rev Rec Gross Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>