unpackaged/main/default/objects/CS_Revenue_Schedule_Item__c/fields/Rev_Rec_Gross_Amount_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Rev_Rec_Gross_Amount_Adjustment__c</fullName>
    <description>If Is Last Line in Schedule then Total_Revenue_Amount_Remainder from header (Gross)</description>
    <formula>IF( Is_Last_Line_in_Schedule__c =TRUE &amp;&amp; NOT(OR(CONTAINS(TEXT(Status__c), &quot;Closed&quot;), CONTAINS(TEXT(Status__c), &quot;Pending Closure&quot;))), IF(Insertion_Unit_Type__c = &#39;CPM&#39; || Insertion_Unit_Type__c = &#39;CPCV&#39; || Insertion_Unit_Type__c = &#39;CPCL&#39;, (Revenue_Schedule__r.Total_Billed_Quantity_To_Date__c/1000) * Gross_Rate__c -
( Revenue_Schedule__r.Total_Recognised_Amount_To_Date__c ), Revenue_Schedule__r.Total_Billed_Quantity_To_Date__c * Gross_Rate__c -
( Revenue_Schedule__r.Total_Recognised_Amount_To_Date__c ))
,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If Is Last Line in Schedule then Total_Revenue_Amount_Remainder from header (Gross)</inlineHelpText>
    <label>Rev Rec Gross Amount Adjustment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>