unpackaged/main/default/objects/CS_Revenue_Schedule_Item__c/fields/Rev_Rec_Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Rev_Rec_Period_End_Date__c</fullName>
    <description>-Monthly Standard : The earliest from SO Line End Date or last day of Standard Calendar Month for the Rev Rec Date.</description>
    <inlineHelpText>-Monthly Standard : The earliest from SO Line End Date or last day of Standard Calendar Month for the Rev Rec Date.</inlineHelpText>
    <label>Rev Rec Period End Date</label>
    <type>Date</type>
</CustomField>