unpackaged/main/default/objects/CS_Revenue_Schedule_Item__c/fields/Rev_Rec_Period_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Rev_Rec_Period_Start_Date__c</fullName>
    <description>-Monthly Standard : The Latest from SO Line Start Date or first day of Standard Calendar Month for the Rev Rec Date.</description>
    <inlineHelpText>-Monthly Standard : The Latest from SO Line Start Date or first day of Standard Calendar Month for the Rev Rec Date.</inlineHelpText>
    <label>Rev Rec Period Start Date</label>
    <type>Date</type>
</CustomField>