unpackaged/main/default/objects/CS_Revenue_Schedule_Item__c/fields/Rev_Rec_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Rev_Rec_Quantity__c</fullName>
    <description>Rev Rec Quantity is always calculated based on DFP Actuals as follows: 
Rev Rec Quantity = Overwrite Quantity if not 0 otherwise DFP Actuals up to Capped Quantity</description>
    <label>Rev Rec Quantity</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>