unpackaged/main/default/objects/CS_Revenue_Schedule_Item__c/fields/Rev_Rec_Rule__c.field-meta.xml
<CustomField>
    <fullName>Rev_Rec_Rule__c</fullName>
    <description>Rev Rec Rule as defined in the Sales Order Line
- Monthly Pro Rata Capped Cumulative</description>
    <inlineHelpText>Rev Rec Rule as defined in the Sales Order Line
- Monthly Pro Rata Capped Cumulative</inlineHelpText>
    <label>Rev Rec Rule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>